--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -122,7 +122,7 @@
                 android:layout_marginLeft="20dp">
 
                 <EditText
-                    android:id="@+id/input_password"
+                    android:id="@+id/first_name"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:hint="First Name"
@@ -406,7 +406,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
             android:gravity="center"
-            android:text="What's you Email"
+            android:text="What's your Email"
             android:textColor="#000" />
 
         <com.google.android.material.textfield.TextInputLayout
