--- a/app/src/main/res/layout/data_layout.xml
+++ b/app/src/main/res/layout/data_layout.xml
@@ -16,14 +16,14 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_toRightOf="@+id/pp"
-        android:text="Name" />
+        android:text="Durgesh" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="•••"
         android:layout_toRightOf="@+id/name"
-        android:layout_marginLeft="230dp"/>
+        android:layout_marginLeft="200dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/image"
         android:layout_toRightOf="@+id/likes"
-        android:text="Tara Thapa and 91K others"
+        android:text="Hari and 91K others"
         android:textSize="12sp" />
 
     <TextView
