--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -14,12 +14,22 @@
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/menu">
 
-    </androidx.recyclerview.widget.RecyclerView>
+       <ScrollView
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:layout_below="@+id/menu"
+           android:id="@+id/menu1">
+
+           <FrameLayout
+               android:id="@+id/dashboard"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"/>
+       </ScrollView>
+
+
+
+
+
 
 </RelativeLayout>
