--- a/app/src/main/res/layout/data_layout.xml
+++ b/app/src/main/res/layout/data_layout.xml
@@ -8,7 +8,7 @@
         android:id="@+id/pp"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@mipmap/ic_launcher_round" />
+        android:src="@drawable/pp" />
 
     <TextView
         android:id="@+id/name"
@@ -38,20 +38,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/pp"
-        android:text="Post.a.sanjdhajdhaha" />
+        android:text="Hello I am David Beckham" />
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/caption"
-        android:src="@mipmap/ic_launcher"
+        android:scaleType="center"
+        android:src="@drawable/pp"
         android:layout_marginBottom="20dp"/>
 
     <ImageView
         android:id="@+id/likes"
         android:layout_below="@+id/image"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/pp"
         android:layout_width="20dp"
         android:layout_height="20dp"/>
 
@@ -70,7 +71,7 @@
         android:layout_below="@+id/image"
         android:layout_toRightOf="@+id/t1"
         android:text="917 Comments • 3.3K Shares"
-        android:layout_marginLeft="25dp"
+        android:layout_marginLeft="40dp"
         android:textSize="12sp" />
 
     <View
